add consent property to application resource + data source
